error.log
> feedeliza-plus@1.0.0 start
> node backend/server.js
/app/backend/src/domains/rewards/rewards.controller.js:5
    const rewardsService = require('./rewards.service')(db);
          ^
SyntaxError: Identifier 'rewardsService' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at module.exports (/app/backend/src/domains/rewards/rewards.routes.js:6:38)
    at module.exports (/app/backend/routes/index.js:54:79)
    at Object.<anonymous> (/app/backend/server.js:62:1)
Node.js v20.19.5